--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "authentication",
     "mongodb"
   ],
-  "author": "dat",
+  "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
