--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "node.js",
