--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,15 @@
         "src": "server.js",
         "use": "@vercel/node"
       }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
     ]
   }
